# ir-project

./: .gitignore  README.md  api.py  bert_embeddings.npy  faiss_index.index  hybrid_embeddings.npy  main.py  pyproject.toml  tfidf_matrix.npz  tfidf_vectorizer.pkl
api/: root.py
api/routers/: documents.py  query.py
data_sets/: first.py  second.py
dataset/: consts.py  load.py  process.py
db/: engine.py  models.py
services/: bert.py  bert_embeddings.py  cleanText.py  clean_text.py  db_service.py  hybrid.py  indexing.py  query_matching.py  query_processing.py  rag.py  tf_idf.py  tfidf.py  tfidf_langchain.py  tfidf_old.py
setup/: download_nltk_data.py
testing/: bert.py  tfidf.py  tfidf_langchain.py
utils/: sanitize.py
